text spacing added

--- a/css/style.css
+++ b/css/style.css
@@ -1307,6 +1307,7 @@ margin-right: 0;
         width: 100%;
         font-size: 24px;
         line-height: 35px;
+        margin-bottom: 20px;
     }
     .box .c-logo{
         width: 100px;
