--- a/css/style.css
+++ b/css/style.css
@@ -728,8 +728,7 @@ right: 0;
    top: 30%;
    right: 8%;
 }
-.footer-area{
-    }
+
 .footer-area .footer-top{    
     display: flex;
     justify-content: space-between;}
@@ -739,9 +738,6 @@ right: 0;
 }
 .contact-area{
     width: 306px;
-}
-.footer-menu{
-
 }
 .footer-menu ul li{
     list-style: none;
@@ -802,13 +798,32 @@ right: 0;
    
 }
 
-@media screen and (min-width:1367px) and (max-width:1600px) {
+@media screen and (min-width:1366px) and (max-width:1400px) {
+    .approach-area {
+        padding: 40PX;
+    }
+    .case-studies-area {
+        padding: 60px;
+    }
+    .product-area{
+        height: 464px;
+    }
+    .product-info p {
+        width: 400px;
+        margin: 20px 0 20px 0;
+    }
    
-       
+    .product-area .product-img img{
+        height: 464px;
+    }
+    .social-media {
+        position: absolute;
+        bottom: -8%;
+    }
+    
+
 }
-
-
-@media screen and (min-width:1024px) and (max-width:1366px) {
+@media screen and (min-width:1024px) and (max-width:1365px) {
     h2 {
         font-size: 25px;
         line-height: 45px;
@@ -848,6 +863,16 @@ right: 0;
         width: 700px;
         margin-right: 50px;
     }
+    .working-area .text-area {
+        padding: 50px;
+    }
+    .c-logo{
+        width: 120px;
+    }
+    .working-area .box {
+        padding: 50px;
+        
+    }
     .customer-area {
         padding: 50px 100px;
     }
@@ -855,9 +880,34 @@ right: 0;
         padding:50px;
         
     }
+    .customer-area .arrow1 img{
+       height: 150px;
+       margin-top: 20px;
+    }
+    .customer-area .arrow2 img{
+        height: 180px;
+        margin-top: 20px;
+     }
+     .customer-area .customer-bottom {
+       margin: 0 50px;
+    }
+    .customer-area .arrow1 {
+        left: 8%;
+    }
+    .customer-area .arrow2 {
+        right: 12%;
+    }
+    .product-area{
+        height: 375px;
+    }
+    
     .product-area .product-img {
         height: 375px;
         margin-right: 0;
+    }
+    .product-area .product-img img{
+        width: 100%;
+        height: 375px;
     }
     .product-info{
         padding: 0 40px 40px 40px;
@@ -867,10 +917,10 @@ right: 0;
     }
     .product-info p {
         width: 300px;
-        margin: 20px 0 20px 0;
+        margin: 15px 0 15px 0;
     }
     .building-area {
-        padding:50px;
+        padding:50px 50px 0 50px;
     }
     
     .team-area .team-info {
@@ -894,13 +944,16 @@ right: 0;
         flex-wrap: wrap;
     }
     .resources-bottom .resouces-box {
-        width: 318px;
+        width: 200px;
         height: 315px;
         border-radius: 30px;
-        margin-bottom: 40px;
+        margin-bottom: 60px;
     }
     .resources-bottom .resouces-box img{
         width: 318px;
+    }
+    .hire-area {
+        padding: 60px;
     }
     .footer-top {
         padding: 0 40px;
@@ -975,6 +1028,9 @@ right: 0;
          }
          .box-text {
             padding: 14px 10px;
+        }
+        .hire-area .heading h2 {
+            width: 400px;
         }
         
 }
@@ -1099,18 +1155,20 @@ right: 0;
         padding:40px;}
 
         .product-info h3 {
-            margin-top: 36px;
+            margin-top: 40px;
             font-size: 18px;
     line-height: 28px;
         }
            .product-info{
             width: 50%;
+            margin-right: 20px;
            }
     .product-info p {
         width: 280px;
         margin: 20px 0;
         font-size: 12px;
         line-height: 20px;
+        margin: 10px 0;
     }
     .btn-area .btn {
         font-size: 10px;
@@ -1119,8 +1177,10 @@ right: 0;
     }
     .product-area .product-img {
         height: 323px;
-        margin-right: 41px;
+        margin-right: 20px;
     }
+    .product-area .product-img img{
+        height: 323px;}
     .more-page h6 {
         font-size: 16px;
     }
@@ -1160,8 +1220,8 @@ right: 0;
             margin-right: 20px;
 }    
 .team-area {
-   
     margin: 73px 0 35px 0;
+
 }
 
 .development-area {
